Adjust CSS file and add download CV

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Long's Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Long (Leo) Nguyen</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="./resources/Long (Leo) Nguyen - CV.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -90,15 +90,26 @@
                 <h3>Jung Talents</h3>
                 <h4>Software Engineer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    •	Designed and developed interactive web applications, responsible for both front-end and back-end development. <br>
+                    •	Developed API endpoints using ASP.NET Core for user authentication (Entity Framework Core and LINQ), services, focused on consistency. <br>
+                    •	Elevated search functionalities and refined course recommendation systems for PTE Master by harnessing Angular.js, ASP .NET, MySQL, and AWS. Increased the user experience and efficiency of the platform, resulting in a rise of positive review and higher traffic through the site. <br>
+                    •	Assisted database migration from on-premises to cloud and modified queries on PTE document search to optimise the search feature for PTE Master project. <br>
+                    •	Contributed to the logic creation for managing learner distribution across different categories and groups within the Mentem platform utilizing Next.js, React.js, and AWS. <br> 
+                    •	Maintained code quality and facilitated collaboration using Git for version control and AWS for continuous integration and deployment pipelines. <br>
+                    •	Translated UI / UX designs wireframes from Figma into functional front-end code. <br>
                 </p>
             </div>
 
-            <div data-date="July 2022 – February 2023">
+            <div data-date="May 2022 – February 2023">
                 <h3>SmartOSC Corporation</h3>
                 <h4>Software Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    •	Built plugin modules in Magento with PHP and PHTML to make API calls to Facebook or Google and return users’ details. <br>
+                    •	Updated and added features to the TH eLIFE mobile app using Yarn, JavaScript and React Native. Interpreted UI/UX Figma designs to the front-end update. <br>
+                    •	Used Jira to track and manage tasks, issues, and project progress, and Confluence to document project requirements, technical specifications, and collaborate with the team on shared knowledge and documentation. <br>
+                    •	Simplify the create new account process and encourage 75% of new users to log in to the E-Commerce site with the Social Login Module. <br>
+                    •	Optimized the checkout process and minimized cart abandonment by 15% with the Checkout Extension Module. <br>
+                    •	Improved performance by 20% and increased positive user experience with the mobile app. <br>
                 </p>
             </div>
 
@@ -106,7 +117,12 @@
                 <h3>Online Mobile Services Join Stock Company (MoMo)</h3>
                 <h4>Software Developer Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    •	Executed data management on MoMo’s Microsoft SQL Server Database. <br>
+                    •	Implemented MaterialUI and VueJs to create adjustable charts for monitoring and build the front end for it. <br>
+                    •	Built the back end with JavaScript and Bash. <br>
+                    •	Integrated several REST API for sending and receiving requests. <br>
+                    •	Familiarized with CI/CD development and performed automated tests. <br>
+                    •	Improved the understanding of 20 million users’ experience and reactions to the services, therefore reducing 33% of the time dedicated to research for future development and improvement. <br>
                 </p>
             </div>
         </div>
@@ -125,7 +141,7 @@
         </div>
         <!-- End .education-block -->
 
-        <div class="education-block">
+        <!-- <div class="education-block">
             <h3>University of Ottawa</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
             <h4>Bachelor of Science in Computer Science</h4>
@@ -141,7 +157,7 @@
                 </li>
             </ul>
         </div>
-        <!-- End .education-block -->
+        End .education-block -->
     </div>
     <!-- End #education -->
 
@@ -252,9 +268,6 @@
                         </li>
                         <li>
                             <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
