--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        As a Full Stack Developer / Software Engineer with years of experience, I bring hands-on commercial software development practice with profound knowledge of React, Angular, Node, ASP .NET Core, Python and JavaScript. I'm committed to create impactful software and excel in collaborative environments. With a strong commitment to continuous learning and improvement, I am eager to contribute to challenging projects and advance my capabilities in software development.
                     </p>
                 </div>
             </div>
@@ -136,7 +134,7 @@
             <span class="education-date">July 2018 - December 2021</span>
             <h4>Bachelor of Science <br> Major in Computing and Software Systems </h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                Proficient in Java, Python, and JavaScript; strong problem-solving and analytical skills; familiarity with version control systems like Git.
             </p>
         </div>
         <!-- End .education-block -->
@@ -242,7 +240,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 copyright">
+                <!-- <div class="col-sm-5 copyright">
                     <p>
                         Copyright &copy; <span id="current-year">2022</span> YOUR NAME
                     </p>
@@ -251,23 +249,14 @@
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
-                </div>
+                </div> -->
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/LongNguyen247" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/long-leo-nguyen-593871198/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
