Added projects description.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="project-info">
                         <h3>Heroku E-Folio</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A portfolio dedicated to students and teachers to showcase their work and interests to their peers and industry worker.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -187,7 +187,7 @@
                     <div class="project-info">
                         <h3>Toilet Pandemic</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A survival video game where the main character loot for supplies while avoiding attach by the "Karens".
                         </p>
                         <a href="#">View Project</a>
                     </div>
