--- a/index.html
+++ b/index.html
@@ -169,6 +169,37 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
+                        <h3>PTE Master</h3>
+                        <p>
+                            A website for PTE learner to plan their study and took PTE practice tests.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>TH eLife Mobile App</h3>
+                        <p>
+                            A mobile application dedicated for users to buy and get offers on TH products on their mobile phone.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
                         <h3>Heroku E-Folio</h3>
                         <p>
                             A portfolio dedicated to students and teachers to showcase their work and interests to their peers and industry worker.
